doctrine prod + env

--- a/.env
+++ b/.env
@@ -78,8 +78,8 @@ TEST_AUTHENTICATOR_USERS_USER1_EMAIL=user1@unice.fr
 TEST_AUTHENTICATOR_USERS_USER1_ROLES=['ROLE_USER']
 
 COURSE_TEACHER_FACTORY_SOURCES_LDAP_UNS_NAME="Annuaire Ldap UNS"
-COURSE_TEACHER_FACTORY_SOURCES_LDAP_UNS_SEARCHSERVICE=AppBundle\Query\CourseTeacher\Adapter\Ldap\SearchCourseTeacherLdapQuery
-COURSE_TEACHER_FACTORY_SOURCES_LDAP_UNS_FINDBYIDSERVICE=AppBundle\Query\CourseTeacher\Adapter\Ldap\FindCourseTeacherByIdLdapQuery
+COURSE_TEACHER_FACTORY_SOURCES_LDAP_UNS_SEARCHSERVICE=App\Syllabus\Query\CourseTeacher\Adapter\Ldap\SearchCourseTeacherLdapQuery
+COURSE_TEACHER_FACTORY_SOURCES_LDAP_UNS_FINDBYIDSERVICE=App\Syllabus\Query\CourseTeacher\Adapter\Ldap\FindCourseTeacherByIdLdapQuery
 
 LDAP_UNS_HOST=ldap.unice.fr
 LDAP_UNS_PORT=389
