--- a/config/packages/prod/doctrine.yaml
+++ b/config/packages/prod/doctrine.yaml
@@ -1,20 +1,28 @@
 doctrine:
+  dbal:
+    default_connection: syllabus
+    connections:
+      syllabus:
+        url: '%env(resolve:DATABASE_APP_URL)%'
+      apogee:
+        driver: '%env(APOGEE_DATABASE_DRIVER)%'
+        host: '%env(APOGEE_DATABASE_HOST)%'
+        port: '%env(APOGEE_DATABASE_PORT)%'
+        dbname: '%env(APOGEE_DATABASE_NAME)%'
+        user: '%env(APOGEE_DATABASE_USER)%'
+        password: '%env(APOGEE_DATABASE_PASSWORD)%'
+        charset: '%env(APOGEE_DATABASE_CHARSET)%'
+        logging: false
+        profiling: false
   orm:
-    auto_generate_proxy_classes: false
+    auto_generate_proxy_classes: '%kernel.debug%'
+    #naming_strategy: doctrine.orm.naming_strategy.underscore
+    #auto_mapping: true
     default_entity_manager: syllabus
     entity_managers:
-      app:
-        naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
-        connection: app
-        metadata_cache_driver:
-          type: pool
-          pool: doctrine.system_cache_pool
-        query_cache_driver:
-          type: pool
-          pool: doctrine.system_cache_pool
-        result_cache_driver:
-          type: pool
-          pool: doctrine.result_cache_pool
+      syllabus:
+        connection: syllabus
+        auto_mapping: true
         mappings:
           Syllabus:
             type: annotation
@@ -29,3 +37,8 @@ doctrine:
             dir: "%kernel.project_dir%/vendor/gedmo/doctrine-extensions/src/Translatable/Entity"
             alias: GedmoTranslatable
           DmishhSettingsBundle: ~
+      apogee:
+        connection: apogee
+        auto_mapping: false
+        mappings:
+          UniceSILSyllabusApogeeImporterBundle: ~
