--- a/config/packages/prod/doctrine.yaml
+++ b/config/packages/prod/doctrine.yaml
@@ -3,15 +3,9 @@ doctrine:
     default_connection: syllabus
     connections:
       syllabus:
-        url: '%env(resolve:DATABASE_APP_URL)%'
+        url: '%env(resolve:DATABASE_SYLLABUS_URL)%'
       apogee:
-        driver: '%env(APOGEE_DATABASE_DRIVER)%'
-        host: '%env(APOGEE_DATABASE_HOST)%'
-        port: '%env(APOGEE_DATABASE_PORT)%'
-        dbname: '%env(APOGEE_DATABASE_NAME)%'
-        user: '%env(APOGEE_DATABASE_USER)%'
-        password: '%env(APOGEE_DATABASE_PASSWORD)%'
-        charset: '%env(APOGEE_DATABASE_CHARSET)%'
+        url: '%env(resolve:DATABASE_APOGEE_URL)%'
         logging: false
         profiling: false
   orm:
@@ -23,6 +17,15 @@ doctrine:
       syllabus:
         connection: syllabus
         auto_mapping: true
+        metadata_cache_driver:
+          type: pool
+          pool: doctrine.system_cache_pool
+          query_cache_driver:
+            type: pool
+            pool: doctrine.system_cache_pool
+          result_cache_driver:
+            type: pool
+            pool: doctrine.result_cache_pool
         mappings:
           Syllabus:
             type: annotation
@@ -40,5 +43,22 @@ doctrine:
       apogee:
         connection: apogee
         auto_mapping: false
+        metadata_cache_driver:
+          type: pool
+          pool: doctrine.system_cache_pool
+          query_cache_driver:
+            type: pool
+            pool: doctrine.system_cache_pool
+          result_cache_driver:
+            type: pool
+            pool: doctrine.result_cache_pool
         mappings:
           UniceSILSyllabusApogeeImporterBundle: ~
+
+framework:
+  cache:
+    pools:
+      doctrine.result_cache_pool:
+        adapter: cache.app
+      doctrine.system_cache_pool:
+        adapter: cache.system
