--- a/config/packages/unice_sil_shibboleth.yaml
+++ b/config/packages/unice_sil_shibboleth.yaml
@@ -1,7 +1,7 @@
 unice_sil_shibboleth:
-  login_path: 'Shibboleth.sso/Login'  # The path used to call Shibboleth login authentication (default = 'Shibboleth.sso/Login')
-  logout_path: 'Shibboleth.sso/Login'  # The path used to call Shibboleth logout (default = 'Shibboleth.sso/Logout')
-  username: 'eppn'  # The Shibboleth attribute that is used as username for the logged in user. The attribute must appear in the'attributes' parameter list (default = 'username')
-  attributes: ['eppn', 'mail', 'givenName', 'sn', 'uid', 'unscoped-affiliation']  # The list of attributes returned by Shibboleth Service Provider
-  login_target : ''  # The route to which the user will be redirected after login. If this parameter is not filled, the user will be redirected to the page from which he comes. (default = null)
-  logout_target : ''  # The route to which the user will be redirected after logout. If this parameter is not filled, the user will be redirected to the page from which he comes. (default = null)
+  login_path: '%env(SHIBBOLETH_LOGIN_PATH)%'  # The path used to call Shibboleth login authentication (default = 'Shibboleth.sso/Login')
+  logout_path: '%env(SHIBBOLETH_LOGOUT_PATH)%'  # The path used to call Shibboleth logout (default = 'Shibboleth.sso/Logout')
+  username: '%env(SHIBBOLETH_USERNAME_ATTRIBUTE)%'  # The Shibboleth attribute that is used as username for the logged in user. The attribute must appear in the'attributes' parameter list (default = 'username')
+  attributes: '%env(json:SHIBBOLETH_ATTRIBUTES)%'  # The list of attributes returned by Shibboleth Service Provider
+  login_target : '%env(SHIBBOLETH_LOGIN_TARGET)%'  # The route to which the user will be redirected after login. If this parameter is not filled, the user will be redirected to the page from which he comes. (default = null)
+  logout_target : '%env(SHIBBOLETH_LOGOUT_TARGET)%'  # The route to which the user will be redirected after logout. If this parameter is not filled, the user will be redirected to the page from which he comes. (default = null)
