--- a/config/packages/parameters.yaml.dist
+++ b/config/packages/parameters.yaml.dist
@@ -7,3 +7,4 @@ parameters:
     - fr
   authenticator: ~
   provider: ~
+  shibboleth_attributes: ["eppn","mail","givenName","sn","uid","unscoped-affiliation"]
