--- a/.env
+++ b/.env
@@ -102,3 +102,13 @@ APOGEE_COURSE_NATURE_TO_IMPORT=['UE','ECUE']
 
 FOS_CK_EDITOR_BASE_PATH='build/ckeditor'
 FOS_CK_EDITOR_JS_PATH='build/ckeditor/ckeditor.js'
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=706fa8acfb066879bbd26116803619ab
+###< lexik/jwt-authentication-bundle ###
