--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -8,6 +8,9 @@ framework:
     save_path: '%kernel.project_dir%/var/sessions/%kernel.environment%'
     cookie_lifetime: 3600
 
+  assets:
+    json_manifest_path: '%kernel.project_dir%/public/build/manifest.json'
+
   php_errors:
     log: true
 
