--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,4 +1,6 @@
 api_platform:
+  resource_class_directories:
+    - '%kernel.project_dir%/src/Syllabus/Entity'
   collection:
     pagination:
       client_items_per_page: true # Disabled by default
