--- a/composer.json
+++ b/composer.json
@@ -63,9 +63,12 @@
         "unicesil/syllabus-apogee-importer-bundle": "^1.0"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^6.5",
         "doctrine/doctrine-fixtures-bundle": "^3.1",
+        "symfony/browser-kit": "4.4.*",
+        "symfony/css-selector": "^4.4",
         "symfony/debug-bundle": "^4.4",
-        "symfony/phpunit-bridge": "^3",
+        "symfony/phpunit-bridge": "^5",
         "symfony/stopwatch": "^4.4",
         "symfony/twig-bundle": "^4.4",
         "symfony/var-dumper": "^4.4",
