--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -56,6 +56,7 @@ security:
 
     access_control:
         - { path: light(\/.*)?$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: /maintenance$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api(/docs)?$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/, roles: ROLE_API }
