--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,7 +10,10 @@
     <php>
         <ini name="error_reporting" value="-1" />
         <server name="APP_ENV" value="test" force="true" />
+        <server name="KERNEL_CLASS" value="App\Kernel" />
         <server name="SHELL_VERBOSITY" value="-1" />
+        <server name="SYMFONY_PHPUNIT_REMOVE" value="" />
+        <server name="SYMFONY_PHPUNIT_VERSION" value="7.5" />
     </php>
 
     <testsuites>
@@ -20,12 +23,25 @@
     </testsuites>
 
     <filter>
-        <whitelist>
-            <directory>src</directory>
+        <whitelist processUncoveredFilesFromWhitelist="true">
+            <directory suffix=".php">src</directory>
+            <exclude>
+                <directory suffix=".php">src/Command</directory>
+                <directory suffix=".php">src/Migrations</directory>
+                <directory suffix=".php">src/DataFixtures</directory>
+                <file>src/Kernel.php</file>
+            </exclude>
         </whitelist>
     </filter>
 
     <listeners>
         <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener" />
+        <listener class="\DAMA\DoctrineTestBundle\PHPUnit\PHPUnitListener"/>
     </listeners>
+
+    <logging>
+        <log type="coverage-html" target="var/coverage" lowUpperBound="35" highLowerBound="70"/>
+        <log type="coverage-clover" target="var/clover.xml" lowUpperBound="35" highLowerBound="70"/>
+        <log type="junit" target="var/junit.xml" lowUpperBound="35" highLowerBound="70"/>
+    </logging>
 </phpunit>
