--- a/.env
+++ b/.env
@@ -111,3 +111,5 @@ APOGEE_COURSE_NATURE_TO_IMPORT=['UE','ECUE']
 
 FOS_CK_EDITOR_BASE_PATH='build/ckeditor'
 FOS_CK_EDITOR_JS_PATH='build/ckeditor/ckeditor.js'
+
+ENV_RESOURCES_LINK='https://bu.univ-cotedazur.fr/fr/rechercher-et-trouver/explorer-par-discipline'
