--- a/config/packages/swiftmailer.yaml
+++ b/config/packages/swiftmailer.yaml
@@ -1,6 +1,3 @@
 swiftmailer:
-  transport: '%env(MAILER_TRANSPORT)%'
-  host: '%env(MAILER_HOST)%'
-  username: '%env(MAILER_USER)%'
-  password: '%env(MAILER_PASSWORD)%'
+  url: '%env(MAILER_URL)%'
   spool: { type: memory }
