fix: upload and store image for a syllabus

--- a/.env
+++ b/.env
@@ -62,7 +62,7 @@ JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=
 ###< lexik/jwt-authentication-bundle ###
 
-DATA_DIRECTORY='%kernel.project_dir%/web/data'
+DATA_DIRECTORY=data
 REGULATION_LINK='http://unice.fr/'
 
 TEST_AUTHENTICATOR_CURRENT=user1
