--- a/config/services.yaml
+++ b/config/services.yaml
@@ -30,7 +30,7 @@ parameters:
                 lastname: '%env(TEST_AUTHENTICATOR_USERS_USER1_LASTNAME)%'
                 email: '%env(TEST_AUTHENTICATOR_USERS_USER1_EMAIL)%'
                 roles:
-                    - ROLE_USER
+                    - ROLE_ADMIN
     ldap_uns_options:
         protocol_version: '%env(LDAP_UNS_OPTIONS_PROTOCOL_VERSION)%'
         referrals: '%env(LDAP_UNS_OPTIONS_REFERRALS)%'
@@ -126,6 +126,10 @@ services:
         tags:
             - { name: kernel.event_listener, event: kernel.exception }
 
+    App\Syllabus\Subscriber\DatabaseActivitySubscriber:
+        tags:
+            - { name: 'doctrine.event_subscriber' }
+
     # QUERY
     App\Syllabus\Query\CourseTeacher\Adapter\Ldap\SearchCourseTeacherLdapQuery:
         public: true
@@ -142,7 +146,7 @@ services:
     jms_serializer.object_constructor:
         alias: jms_serializer.doctrine_object_constructor
 
-#LDAP
+    #LDAP
     App\Ldap\:
         resource: '../src/Ldap/*'
         exclude: '../src/Ldap/{Entity,Repository,Tests}'
