feat: tuto links configurable in env vars

--- a/.env
+++ b/.env
@@ -113,3 +113,6 @@ FOS_CK_EDITOR_BASE_PATH='build/ckeditor'
 FOS_CK_EDITOR_JS_PATH='build/ckeditor/ckeditor.js'
 
 ENV_RESOURCES_LINK='https://bu.univ-cotedazur.fr/fr/rechercher-et-trouver/explorer-par-discipline'
+
+TUTORIAL_LINK_SYLLABUS_DASHBOARD=
+TUTORIAL_LINK_MAIL_PUBLISHED=
