--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -2,6 +2,8 @@ twig:
   debug: '%kernel.debug%'
   strict_variables: '%kernel.debug%'
   globals:
+    tutorial_link_syllabus_dashboard: '%env(TUTORIAL_LINK_SYLLABUS_DASHBOARD)%'
+    tutorial_link_mail_published: '%env(TUTORIAL_LINK_MAIL_PUBLISHED)%'
     regulation_link : '%env(REGULATION_LINK)%'
     app_version: prototype
     managed_locales: '%managed_locales%'
