--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -5,3 +5,37 @@ api_platform:
     pagination:
       client_items_per_page: true # Disabled by default
       items_per_page_parameter_name: itemsPerPage # Default value
+
+services:
+  id.search_filter:
+    parent: 'api_platform.doctrine.orm.search_filter'
+    arguments: [ { id: 'exact' } ]
+    tags: [ 'api_platform.filter' ]
+  label.search_filter:
+    parent: 'api_platform.doctrine.orm.search_filter'
+    arguments: [ { label: 'partial' } ]
+    tags: [ 'api_platform.filter' ]
+  title.search_filter:
+    parent: 'api_platform.doctrine.orm.search_filter'
+    arguments: [ { title: 'partial' } ]
+    tags: [ 'api_platform.filter' ]
+  user.search_filter:
+    parent: 'api_platform.doctrine.orm.search_filter'
+    arguments: [ { lastname: 'partial', firstname: "partial", email: "partial" } ]
+    tags: [ 'api_platform.filter' ]
+  username.search_filter:
+    parent: 'api_platform.doctrine.orm.search_filter'
+    arguments: [ { username: 'partial' } ]
+    tags: [ 'api_platform.filter' ]
+  obsolete.boolean_filter:
+    parent: 'api_platform.doctrine.orm.boolean_filter'
+    arguments: [ { obsolete: ~ } ]
+    tags: [ 'api_platform.filter' ]
+  code.search_filter:
+    parent: 'api_platform.doctrine.orm.search_filter'
+    arguments: [ { code: 'exact' } ]
+    tags: [ 'api_platform.filter' ]
+  year.search_filter:
+    parent: 'api_platform.doctrine.orm.search_filter'
+    arguments: [ { year: 'exact' } ]
+    tags: [ 'api_platform.filter' ]
