fix: configure syllabus issue link in app env

--- a/.env
+++ b/.env
@@ -116,3 +116,4 @@ ENV_RESOURCES_LINK='https://bu.univ-cotedazur.fr/fr/rechercher-et-trouver/explor
 
 TUTORIAL_LINK_SYLLABUS_DASHBOARD=
 TUTORIAL_LINK_MAIL_PUBLISHED=
+TUTORIAL_LINK_SYLLABUS_ISSUE=
