--- a/.env
+++ b/.env
@@ -117,3 +117,4 @@ ENV_RESOURCES_LINK='https://bu.univ-cotedazur.fr/fr/rechercher-et-trouver/explor
 TUTORIAL_LINK_SYLLABUS_DASHBOARD=
 TUTORIAL_LINK_MAIL_PUBLISHED=
 TUTORIAL_LINK_SYLLABUS_ISSUE=
+TUTORIAL_LINK_PRESENTATION_VIDEO=
