feat: export permissions from Moodle database (instead of API)

--- a/.env
+++ b/.env
@@ -107,6 +107,14 @@ APOGEE_DATABASE_PASSWORD=
 APOGEE_DATABASE_CHARSET=UTF8
 MOODLE_API_URL='http://moodle.domain.com/webservice/rest/server.php'
 MOODLE_API_TOKEN=null
+MOODLE_DB_DRIVER=
+MOODLE_DB_PORT=
+MOODLE_DB_HOST=
+MOODLE_DB_DATABASE=
+MOODLE_DB_USER=
+MOODLE_DB_PASSWORD=
+MOODLE_DB_CHARSET=
+MOODLE_DB_TABLE_PREFIX=
 APOGEE_COURSE_NATURE_TO_IMPORT=['UE','ECUE']
 
 FOS_CK_EDITOR_BASE_PATH='build/ckeditor'
