--- a/composer.json
+++ b/composer.json
@@ -22,57 +22,64 @@
     "require": {
         "php": ">=7.2",
         "ext-json": "*",
-        "api-platform/api-pack": "^1.2",
+        "api-platform/core": "^2.6",
         "dmishh/settings-bundle": "3.0.*@dev",
-        "doctrine/doctrine-bundle": "^1.6",
+        "doctrine/annotations": "^1.0",
+        "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-migrations-bundle": "^2.0",
-        "doctrine/orm": "^2.5",
+        "doctrine/orm": "^2.7",
         "exercise/htmlpurifier-bundle": "^2.0",
         "friendsofsymfony/ckeditor-bundle": "^2.0",
         "guzzlehttp/guzzle": "^6.5",
         "incenteev/composer-parameter-handler": "^2.0",
         "knplabs/knp-paginator-bundle": "4.1.1",
         "league/csv": "^9.5",
-        "lexik/form-filter-bundle": "v5.0.10",
+        "lexik/form-filter-bundle": "^7.0",
         "lexik/jwt-authentication-bundle": "^2.6",
         "lexik/translation-bundle": "^4.0",
         "misd/linkify-bundle": "dev-master",
+        "nelmio/cors-bundle": "^2.2",
         "peppeocchi/php-cron-scheduler": "^3.0",
         "phpdocumentor/reflection-docblock": "v4.3.4",
         "ramsey/uuid": "^3.8",
         "sensio/framework-extra-bundle": "^5.0.0",
         "stof/doctrine-extensions-bundle": "^1.3",
+        "symfony/asset": "4.4.*",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
+        "symfony/expression-language": "4.4.*",
         "symfony/flex": "^1.11",
         "symfony/form": "4.4.*",
         "symfony/framework-bundle": "4.4.*",
         "symfony/ldap": "4.4.*",
         "symfony/mime": "4.4.*",
         "symfony/monolog-bundle": "^3.5.0",
-        "symfony/orm-pack": "^2.1",
         "symfony/polyfill-apcu": "^1.0",
+        "symfony/property-access": "4.4.*",
+        "symfony/property-info": "4.4.*",
+        "symfony/proxy-manager-bridge": "4.4.*",
         "symfony/security-bundle": "4.4.*",
+        "symfony/serializer": "4.4.*",
         "symfony/swiftmailer-bundle": "^3.5",
         "symfony/templating": "4.4.*",
-        "symfony/twig-pack": "^1.0",
+        "symfony/twig-bundle": "^4.4",
         "symfony/validator": "4.4.*",
         "symfony/webpack-encore-bundle": "^1.1",
-        "tanigami/specification": "^1.3",
-        "tetranz/select2entity-bundle": "^2.9",
+        "tetranz/select2entity-bundle": "^3.0",
         "twig/extensions": "^1.5",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0",
         "unicesil/shibboleth-bundle": "^1.1",
         "unicesil/syllabus-apogee-importer-bundle": "^1.0"
     },
     "require-dev": {
-        "dama/doctrine-test-bundle": "^6.5",
+        "dama/doctrine-test-bundle": "^6.7",
         "doctrine/doctrine-fixtures-bundle": "^3.1",
         "symfony/browser-kit": "4.4.*",
         "symfony/css-selector": "^4.4",
         "symfony/debug-bundle": "^4.4",
         "symfony/phpunit-bridge": "^5",
         "symfony/stopwatch": "^4.4",
-        "symfony/twig-bundle": "^4.4",
         "symfony/var-dumper": "^4.4",
         "symfony/web-profiler-bundle": "^4.4"
     },
