--- a/composer.json
+++ b/composer.json
@@ -32,56 +32,53 @@
         "friendsofsymfony/ckeditor-bundle": "^2.0",
         "guzzlehttp/guzzle": "^6.5",
         "incenteev/composer-parameter-handler": "^2.0",
-        "knplabs/knp-paginator-bundle": "4.1.1",
+        "knplabs/knp-paginator-bundle": "^5.3",
         "league/csv": "^9.5",
         "lexik/form-filter-bundle": "^7.0",
         "lexik/jwt-authentication-bundle": "^2.6",
-        "lexik/translation-bundle": "^4.0",
-        "misd/linkify-bundle": "dev-master",
         "nelmio/cors-bundle": "^2.2",
         "peppeocchi/php-cron-scheduler": "^3.0",
         "phpdocumentor/reflection-docblock": "v4.3.4",
         "ramsey/uuid": "^3.8",
         "sensio/framework-extra-bundle": "^5.0.0",
         "stof/doctrine-extensions-bundle": "^1.3",
-        "symfony/asset": "4.4.*",
-        "symfony/console": "4.4.*",
-        "symfony/dotenv": "4.4.*",
-        "symfony/expression-language": "4.4.*",
+        "symfony/asset": "5.4.*",
+        "symfony/console": "5.4.*",
+        "symfony/dotenv": "5.4.*",
+        "symfony/expression-language": "5.4.*",
         "symfony/flex": "^1.11",
-        "symfony/form": "4.4.*",
-        "symfony/framework-bundle": "4.4.*",
-        "symfony/ldap": "4.4.*",
-        "symfony/mime": "4.4.*",
+        "symfony/form": "5.4.*",
+        "symfony/framework-bundle": "5.4.*",
+        "symfony/ldap": "5.4.*",
+        "symfony/mime": "5.4.*",
         "symfony/monolog-bundle": "^3.5.0",
         "symfony/polyfill-apcu": "^1.0",
-        "symfony/property-access": "4.4.*",
-        "symfony/property-info": "4.4.*",
-        "symfony/proxy-manager-bridge": "4.4.*",
-        "symfony/security-bundle": "4.4.*",
-        "symfony/serializer": "4.4.*",
+        "symfony/property-access": "5.4.*",
+        "symfony/property-info": "5.4.*",
+        "symfony/proxy-manager-bridge": "5.4.*",
+        "symfony/security-bundle": "5.4.*",
+        "symfony/serializer": "5.4.*",
         "symfony/swiftmailer-bundle": "^3.5",
-        "symfony/templating": "4.4.*",
-        "symfony/twig-bundle": "^4.4",
-        "symfony/validator": "4.4.*",
+        "symfony/templating": "5.4.*",
+        "symfony/twig-bundle": "^5.4",
+        "symfony/validator": "5.4.*",
         "symfony/webpack-encore-bundle": "^1.1",
         "tetranz/select2entity-bundle": "^3.0",
         "twig/extensions": "^1.5",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
-        "unicesil/shibboleth-bundle": "^1.1",
         "unicesil/syllabus-apogee-importer-bundle": "^1.0"
     },
     "require-dev": {
         "dama/doctrine-test-bundle": "^6.7",
         "doctrine/doctrine-fixtures-bundle": "^3.1",
-        "symfony/browser-kit": "4.4.*",
-        "symfony/css-selector": "^4.4",
-        "symfony/debug-bundle": "^4.4",
+        "symfony/browser-kit": "5.4.*",
+        "symfony/css-selector": "^5.4",
+        "symfony/debug-bundle": "^5.4",
         "symfony/phpunit-bridge": "^5",
-        "symfony/stopwatch": "^4.4",
-        "symfony/var-dumper": "^4.4",
-        "symfony/web-profiler-bundle": "^4.4"
+        "symfony/stopwatch": "^5.4",
+        "symfony/var-dumper": "^5.4",
+        "symfony/web-profiler-bundle": "^5.4"
     },
     "scripts": {
         "symfony-scripts": [
@@ -97,7 +94,8 @@
         ],
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "ckeditor:install": "symfony-cmd"
         }
     },
     "config": {
@@ -124,7 +122,7 @@
         },
         "symfony": {
             "allow-contrib": false,
-            "require": "4.4.*"
+            "require": "5.4.*"
         },
         "branch-alias": null
     }
