--- a/composer.json
+++ b/composer.json
@@ -67,7 +67,7 @@
         "twig/extensions": "^1.5",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
-        "unicesil/syllabus-apogee-importer-bundle": "^1.0"
+        "unicesil/shibboleth-bundle": "5.x-dev"
     },
     "require-dev": {
         "dama/doctrine-test-bundle": "^6.7",
@@ -107,7 +107,8 @@
         },
         "sort-packages": true,
         "allow-plugins": {
-            "symfony/flex": true
+            "symfony/flex": true,
+            "composer/package-versions-deprecated": true
         }
     },
     "extra": {
