--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "lexik/form-filter-bundle": "^7.0",
         "lexik/jwt-authentication-bundle": "^2.6",
         "lexik/translation-bundle": "^5.4",
+        "misd/linkify-bundle": "^5.4",
         "nelmio/cors-bundle": "^2.2",
         "peppeocchi/php-cron-scheduler": "^3.0",
         "phpdocumentor/reflection-docblock": "v4.3.4",
