feat: add logout path

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -41,6 +41,8 @@ security:
             lazy: true
             provider: main
             switch_user: false
+            logout:
+                path: app_logout
             custom_authenticators:
                 - '%authenticator%'
 
