--- a/config/services.yaml
+++ b/config/services.yaml
@@ -137,6 +137,15 @@ services:
         tags:
             - { name: 'doctrine.event_subscriber' }
 
+    unicesil.shibboleth_logout_event:
+        class: UniceSIL\ShibbolethBundle\EventListener\LogoutEventListener
+        arguments: ['%unice_sil_shibboleth%', "@router"]
+        tags:
+            - name: 'kernel.event_listener'
+              event: 'Symfony\Component\Security\Http\Event\LogoutEvent'
+              method: onLogout
+              dispatcher: security.event_dispatcher.main
+
     # QUERY
     App\Syllabus\Query\CourseTeacher\Adapter\Ldap\SearchCourseTeacherLdapQuery:
         public: true
