--- a/composer.json
+++ b/composer.json
@@ -78,6 +78,7 @@
     "require-dev": {
         "dama/doctrine-test-bundle": "^6.7",
         "doctrine/doctrine-fixtures-bundle": "^3.1",
+        "phpunit/phpunit": "7.5",
         "symfony/browser-kit": "5.4.*",
         "symfony/css-selector": "^5.4",
         "symfony/debug-bundle": "^5.4",
