--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,17 +1,15 @@
 framework:
-  #esi: ~
-  secret: '%env(APP_SECRET)%'
+    secret: '%env(APP_SECRET)%'
+    http_method_override: false
 
-  session:
-    # https://symfony.com/doc/current/reference/configuration/framework.html#handler-id
-    handler_id: session.handler.native_file
-    save_path: '%kernel.project_dir%/var/sessions/%kernel.environment%'
-    cookie_lifetime: 3600
+    session:
+        handler_id: null
+        cookie_secure: auto
+        cookie_samesite: lax
+        storage_factory_id: session.storage.factory.native
 
-  assets:
-    json_manifest_path: '%kernel.project_dir%/public/build/manifest.json'
+    php_errors:
+        log: true
 
-  php_errors:
-    log: true
+    serializer: { enable_annotations: true }
 
-  serializer: { enable_annotations: true }
