--- a/composer.json
+++ b/composer.json
@@ -62,6 +62,7 @@
         "symfony/property-access": "5.4.*",
         "symfony/property-info": "5.4.*",
         "symfony/proxy-manager-bridge": "5.4.*",
+        "symfony/runtime": "5.4.*",
         "symfony/security-bundle": "5.4.*",
         "symfony/serializer": "5.4.*",
         "symfony/swiftmailer-bundle": "^3.5",
@@ -114,7 +115,8 @@
         "sort-packages": true,
         "allow-plugins": {
             "symfony/flex": true,
-            "composer/package-versions-deprecated": true
+            "composer/package-versions-deprecated": true,
+            "symfony/runtime": true
         }
     },
     "extra": {
