--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,7 +1,7 @@
 security:
     enable_authenticator_manager: true
 
-    encoders:
+    password_hashers:
         App\Syllabus\Entity\User:
             algorithm: bcrypt
             cost: 12
@@ -14,11 +14,9 @@ security:
             entity: { class: App\Syllabus\Entity\User, property: username }
 
     firewalls:
-        # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-
         login:
             pattern:  ^/api/login
             stateless: true
@@ -28,14 +26,12 @@ security:
                 success_handler:          lexik_jwt_authentication.handler.authentication_success
                 failure_handler:          lexik_jwt_authentication.handler.authentication_failure
                 provider:                 user_db
-
         api:
             pattern: ^/api/(?!docs.+/?)
             stateless: true
-            guard:
-                provider: user_db
-                authenticators:
-                    - lexik_jwt_authentication.jwt_token_authenticator
+            provider: user_db
+            custom_authenticators:
+                - lexik_jwt_authentication.jwt_token_authenticator
         main:
             pattern: ^/
             lazy: true
