--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,3 @@
-settings:
-  resource: "@DmishhSettingsBundle/Resources/config/routing.yml"
-  prefix: /settings
+dmishh_settings_manage_global:
+  path: /settings/global
+  controller: Dmishh\SettingsBundle\Controller\SettingsController::manageGlobalAction
