--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,16 +22,17 @@ security:
             stateless: true
             lazy: true
             json_login:
-                check_path:               /api/login_check
-                success_handler:          lexik_jwt_authentication.handler.authentication_success
-                failure_handler:          lexik_jwt_authentication.handler.authentication_failure
-                provider:                 user_db
+                check_path:         /api/login_check
+                username_path:      username
+                password_path:      password
+                success_handler:    lexik_jwt_authentication.handler.authentication_success
+                failure_handler:    lexik_jwt_authentication.handler.authentication_failure
+                provider:           user_db
         api:
             pattern: ^/api/(?!docs.+/?)
             stateless: true
             provider: user_db
-            custom_authenticators:
-                - lexik_jwt_authentication.jwt_token_authenticator
+            jwt: ~
         main:
             pattern: ^/
             lazy: true
