--- a/composer.json
+++ b/composer.json
@@ -82,6 +82,7 @@
         "symfony/browser-kit": "5.4.*",
         "symfony/css-selector": "^5.4",
         "symfony/debug-bundle": "^5.4",
+        "symfony/http-client": "5.4.*",
         "symfony/phpunit-bridge": "^5.4",
         "symfony/stopwatch": "^5.4",
         "symfony/var-dumper": "^5.4",
