--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
     "@babel/core": "^7.4.3",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.4.3",
-    "@symfony/webpack-encore": "^0.23.0",
+    "@symfony/webpack-encore": "^1.7.0",
     "autoprefixer": "^9.5.1",
     "bootstrap": "^4.3.1",
-    "node-sass": "^7.0.0",
-    "postcss-loader": "^3.0.0",
-    "sass-loader": "^7.1.0",
+    "file-loader": "^6.2.0",
+    "postcss-loader": "^6.2.1",
+    "sass": "^1.49.7",
+    "sass-loader": "^12.4.0",
     "webpack-notifier": "^1.7.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.1",
-    "admin-lte": "^3.0.1",
+    "admin-lte": "3.1.0",
     "bootbox": "^5.1.1",
     "bootstrap4-toggle": "^3.5.0",
     "ckeditor": "^4.11.4",
