build: update symfony/security-bundle

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,6 +35,7 @@ security:
             jwt: ~
         main:
             pattern: ^/
+            stateless: false
             lazy: true
             provider: main
             logout:
