--- a/composer.json
+++ b/composer.json
@@ -63,7 +63,7 @@
         "symfony/property-info": "5.4.*",
         "symfony/proxy-manager-bridge": "5.4.*",
         "symfony/runtime": "5.4.*",
-        "symfony/security-bundle": "5.4.*",
+        "symfony/security-bundle": "5.4.3",
         "symfony/serializer": "5.4.*",
         "symfony/swiftmailer-bundle": "^3.5",
         "symfony/templating": "5.4.*",
