--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         }
     ],
     "require": {
-        "php": ">=7.2",
+        "php": ">=8.0",
         "ext-json": "*",
         "api-platform/core": "^2.6",
         "dmishh/settings-bundle": "3.0.*@dev",
@@ -39,12 +39,12 @@
         "knplabs/knp-paginator-bundle": "^5.3",
         "league/csv": "^9.5",
         "lexik/form-filter-bundle": "^7.0",
-        "lexik/jwt-authentication-bundle": "^2.6",
+        "lexik/jwt-authentication-bundle": "^2.19",
         "lexik/translation-bundle": "^5.4",
-        "misd/linkify-bundle": "^5.4",
+        "misd/linkify-bundle": "^6.4",
         "nelmio/cors-bundle": "^2.2",
-        "peppeocchi/php-cron-scheduler": "^3.0",
-        "phpdocumentor/reflection-docblock": "v4.3.4",
+        "peppeocchi/php-cron-scheduler": "^4.0",
+        "phpdocumentor/reflection-docblock": "^5.4",
         "ramsey/uuid": "^3.8",
         "sensio/framework-extra-bundle": "^5.0.0",
         "stof/doctrine-extensions-bundle": "^1.3",
@@ -52,7 +52,7 @@
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
         "symfony/expression-language": "5.4.*",
-        "symfony/flex": "^1.11",
+        "symfony/flex": "^1.3.1",
         "symfony/form": "5.4.*",
         "symfony/framework-bundle": "5.4.*",
         "symfony/ldap": "5.4.*",
@@ -79,6 +79,8 @@
     "require-dev": {
         "dama/doctrine-test-bundle": "^6.7",
         "doctrine/doctrine-fixtures-bundle": "^3.1",
+        "nikic/php-parser": "^4.18",
+        "phpunit/phpunit": "^10.0",
         "symfony/browser-kit": "5.4.*",
         "symfony/css-selector": "^5.4",
         "symfony/debug-bundle": "^5.4",
@@ -108,7 +110,7 @@
     },
     "config": {
         "platform": {
-            "php": "7.2.5"
+            "php": "8.2.14"
         },
         "preferred-install": {
             "*": "dist"
