--- a/composer.json
+++ b/composer.json
@@ -20,19 +20,19 @@
         },
         {
             "type": "vcs",
-            "url": "https://github.com/Unice-SIL/LexikTranslationBundle"
+            "url": "https://github.com/Unice-SIL/SettingsBundle"
         }
     ],
     "require": {
         "php": ">=8.0",
         "ext-json": "*",
-        "api-platform/core": "^2.6",
-        "dmishh/settings-bundle": "3.0.*@dev",
+        "api-platform/core": "^3.0",
+        "dmishh/settings-bundle": "^6.4",
         "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^2.4",
-        "doctrine/doctrine-migrations-bundle": "^2.0",
+        "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
-        "exercise/htmlpurifier-bundle": "^2.0",
+        "exercise/htmlpurifier-bundle": "^5.0",
         "friendsofsymfony/ckeditor-bundle": "^2.0",
         "guzzlehttp/guzzle": "^6.5",
         "incenteev/composer-parameter-handler": "^2.0",
@@ -40,55 +40,55 @@
         "league/csv": "^9.5",
         "lexik/form-filter-bundle": "^7.0",
         "lexik/jwt-authentication-bundle": "^2.19",
-        "lexik/translation-bundle": "^5.4",
+        "lexik/translation-bundle": "^v6.0",
         "misd/linkify-bundle": "^6.4",
         "nelmio/cors-bundle": "^2.2",
         "peppeocchi/php-cron-scheduler": "^4.0",
         "phpdocumentor/reflection-docblock": "^5.4",
-        "ramsey/uuid": "^3.8",
-        "sensio/framework-extra-bundle": "^5.0.0",
+        "sensio/framework-extra-bundle": "^6.0.0",
         "stof/doctrine-extensions-bundle": "^1.3",
-        "symfony/asset": "5.4.*",
-        "symfony/console": "5.4.*",
-        "symfony/dotenv": "5.4.*",
-        "symfony/expression-language": "5.4.*",
+        "symfony/asset": "6.4.*",
+        "symfony/console": "6.4.*",
+        "symfony/dotenv": "6.4.*",
+        "symfony/expression-language": "6.4.*",
         "symfony/flex": "^1.3.1",
-        "symfony/form": "5.4.*",
-        "symfony/framework-bundle": "5.4.*",
-        "symfony/ldap": "5.4.*",
-        "symfony/mime": "5.4.*",
+        "symfony/form": "6.4.*",
+        "symfony/framework-bundle": "6.4.*",
+        "symfony/ldap": "6.4.*",
+        "symfony/mailer": "^6.4",
+        "symfony/mime": "6.4.*",
         "symfony/monolog-bundle": "^3.5.0",
         "symfony/polyfill-apcu": "^1.0",
-        "symfony/property-access": "5.4.*",
-        "symfony/property-info": "5.4.*",
-        "symfony/proxy-manager-bridge": "5.4.*",
-        "symfony/runtime": "5.4.*",
-        "symfony/security-bundle": "5.4.3",
-        "symfony/serializer": "5.4.*",
-        "symfony/swiftmailer-bundle": "^3.5",
-        "symfony/templating": "5.4.*",
-        "symfony/twig-bundle": "^5.4",
-        "symfony/validator": "5.4.*",
+        "symfony/property-access": "6.4.*",
+        "symfony/property-info": "6.4.*",
+        "symfony/proxy-manager-bridge": "6.4.*",
+        "symfony/runtime": "6.4.*",
+        "symfony/security-bundle": "6.4.3",
+        "symfony/serializer": "6.4.*",
+        "symfony/templating": "6.4.*",
+        "symfony/twig-bundle": "^6.4",
+        "symfony/uid": "6.4.*",
+        "symfony/validator": "6.4.*",
         "symfony/webpack-encore-bundle": "^1.1",
         "tetranz/select2entity-bundle": "^3.0",
         "twig/extensions": "^1.5",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
-        "unicesil/shibboleth-bundle": "^5.4"
+        "unicesil/shibboleth-bundle": "^6.4"
     },
     "require-dev": {
         "dama/doctrine-test-bundle": "^6.7",
         "doctrine/doctrine-fixtures-bundle": "^3.1",
         "nikic/php-parser": "^4.18",
         "phpunit/phpunit": "^10.0",
-        "symfony/browser-kit": "5.4.*",
-        "symfony/css-selector": "^5.4",
-        "symfony/debug-bundle": "^5.4",
-        "symfony/http-client": "5.4.*",
-        "symfony/phpunit-bridge": "^5.4",
-        "symfony/stopwatch": "^5.4",
-        "symfony/var-dumper": "^5.4",
-        "symfony/web-profiler-bundle": "^5.4"
+        "symfony/browser-kit": "6.4.*",
+        "symfony/css-selector": "^6.4",
+        "symfony/debug-bundle": "^6.4",
+        "symfony/http-client": "6.4.*",
+        "symfony/phpunit-bridge": "^6.4",
+        "symfony/stopwatch": "^6.4",
+        "symfony/var-dumper": "^6.4",
+        "symfony/web-profiler-bundle": "^6.4"
     },
     "scripts": {
         "symfony-scripts": [
@@ -133,7 +133,7 @@
         },
         "symfony": {
             "allow-contrib": false,
-            "require": "5.4.*"
+            "require": "6.4.*"
         },
         "branch-alias": null
     }
