--- a/config/packages/exercise_html_purifier.yaml
+++ b/config/packages/exercise_html_purifier.yaml
@@ -1,5 +1,7 @@
 exercise_html_purifier:
     # full configuration reference: http://htmlpurifier.org/live/configdoc/plain.html
-    default:
-        # the charset used by the original contents
-        Core.Encoding: 'UTF-8'
+    html_profiles:
+        custom:
+            config:
+                # the charset used by the original contents
+                Core.Encoding: 'UTF-8'
