--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -11,5 +11,7 @@ framework:
     php_errors:
         log: true
 
-    serializer: { enable_annotations: true }
+    serializer: { enable_attributes: true }
+
+    handle_all_throwables: true
 
