--- a/composer.json
+++ b/composer.json
@@ -81,6 +81,7 @@
         "doctrine/doctrine-fixtures-bundle": "^3.1",
         "nikic/php-parser": "^4.18",
         "phpunit/phpunit": "^10.0",
+        "rector/rector": "^1.2",
         "symfony/browser-kit": "6.4.*",
         "symfony/css-selector": "^6.4",
         "symfony/debug-bundle": "^6.4",
