--- a/config/packages/lexik_jwt_authentication.yaml
+++ b/config/packages/lexik_jwt_authentication.yaml
@@ -3,4 +3,4 @@ lexik_jwt_authentication:
   public_key:       '%env(resolve:JWT_PUBLIC_KEY)%'  # required for token verification
   pass_phrase:      '%env(JWT_PASSPHRASE)%' # required for token creation, usage of an environment variable is recommended
   token_ttl:        3600
-  user_identity_field: username
+  user_id_claim: username
